# capstone-cohort-week4

./: .dockerignore  .gitignore  docker-compose.yml  env.example  pyproject.toml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/api/agents/: agents.py  retrieval_generation.py
apps/api/src/api/core/: config.py
apps/api/tests/: test_toolcall_model.py
apps/chatbot_ui/: Dockerfile  pyproject.toml
apps/chatbot_ui/src/chatbot_ui/core/: config.py
apps/items_mcp_server/: pyproject.toml
apps/reviews_mcp_server/: pyproject.toml
notebooks/prerequisites/: 01-llm-api.ipynb
notebooks/week_1/: 01-explore-amazon-dataset.ipynb  02-RAG-preprocessing-Amazon.ipynb  03-RAG-pipeline.ipynb  04-evaluation-dataset.ipynb  05-RAG-Evals.ipynb
notebooks/week_2/: 01-Structured-Outputs-Intro.ipynb  02-Structured-Outputs-RAG-pipeline.ipynb  03-Hybrid-Search.ipynb  04-Reranking.ipynb  05-Prompt-Versioning.ipynb
notebooks/week_3/: 01-LangGraph-Intro.ipynb
notebooks/week_4/: 01-Multi-Turn-Agent.ipynb  02-Multiple-Tools.ipynb  04-MCP.ipynb  05-Streaming-State.ipynb
