[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Misa", email = "you@example.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cohere>=5.20.2",
    "fastapi>=0.128.0",
    "google-genai>=1.58.0",
    "groq>=1.0.0",
    "instructor>=1.14.4",
    "langgraph>=1.0.6",
    "langgraph-checkpoint-postgres>=3.0.4",
    "langsmith>=0.6.4",
    "openai>=2.15.0",
    "psycopg-binary>=3.3.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "qdrant-client>=1.16.2",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
shared = {workspace = true}

[tool.hatch.build.targets.wheel]
package = ["src/api"]

[tool.hatch.build.targets.sdist]
include = ["src/","tests/","README.md"]
