[project]
name = "chatbot-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Misa", email = "you@example.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "streamlit>=1.53.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
shared = {workspace = true}

[tool.hatch.build.targets.wheel]
package = ["src/api"]

[tool.hatch.build.targets.sdist]
include = ["src/","tests/","README.md"]
